# xz

./: Architecture.cmake  CMakeLists.txt
doc/: faq.txt
doc/examples/: 01_compress_easy.c  02_decompress.c  03_compress_custom.c  04_compress_easy_mt.c
doc/examples_old/: xz_pipe_comp.c  xz_pipe_decomp.c
src/: CMakeLists.txt
src/liblzma/: CMakeLists.txt
src/liblzma/rangecoder/: range_common.h
src/xz/: CMakeLists.txt
src/xzdec/: CMakeLists.txt
tests/: CMakeLists.txt
